<resources>
    <!--login-->
    <string name="logout">Logout</string>
    <string name="login_Button">Login</string>

    <string name="client">Join Row</string>
    <string name="leftrow">Left Row</string>
    <string name="company">Start Row</string>
    <string name="companyinrow">Stop Row</string>
    <string name="hiplusname"></string>
    <string name="getqr">Get the QR code!</string>
    <!--register-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_account">Do you already have an account?</string>
    <string name="app_name">StopRows</string>
    <string name="Title_Register_txt">Sing up!</string>
    <string name="Id_Register_txt">Id/Email</string>
    <string name="Mail_Register_txt">Email</string>
    <string name="MailExample_Register_txt">example@example.com</string>
    <string name="Type_Register_txt">Type of account</string>
    <string name="User_Register">User</string>
    <string name="Company_Register">Company</string>
    <string name="Password_Register_txt">Password</string>
    <string name="Password_Register">***********</string>
    <string name="CPassword_Register_txt">Confirm Password</string>
    <string name="Button_Register_txt">Register</string>

    <!--QR-->
    <string name="cancel_Button">Cancel</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_company">company</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
